[project]
name = "microgrid-rl-env"
version = "1.0.0"
description = "OpenEnv Microgrid RL Environment"
authors = [
    { name = "Anirudh Patil" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

# 🔥 THIS IS CRITICAL (you were missing this)
[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"